smooth transitions of the cards and on the navigation

--- a/src/index.css
+++ b/src/index.css
@@ -1,581 +1,1 @@
-:root {
-  --primary-color: #878a8c;
-  --secondary-color: #d2d6d9;
-  --third-color: #9fa3a6;
-  --forth-color: #b0b9bf;
-  --fifth-color: #f0f1f2;
-  --black: #000000;
-  --white: #ffffff;
-  --dark: rgb(113, 113, 113);
-  --red: rgb(196, 175, 175);
-  --green: rgb(176, 196, 175);
-  --yellow: rgb(196, 195, 175);
-  --danger-button: rgb(217 187 186);
-  --disabled-button: rgb(192, 141, 141);
-  --error: rgb(158 68 68);
-  overflow: hidden;
-}
-* {
-  box-sizing: border-box;
-}
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
-  width: 100vw;
-}
-
-#root {
-  height: 100%;
-  width: 100%;
-}
-p {
-  font-weight: 300;
-}
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-.App {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  position: relative;
-}
-
-.Nav {
-  min-width: 300px;
-}
-
-nav h2 {
-  padding: 0.8rem 0 0 2rem;
-}
-
-.Main {
-  height: 100vh;
-  overflow: hidden;
-  overflow-x: scroll;
-}
-
-.relativeContainer {
-  height: 100%;
-  width: 100%;
-  /*   overflow: hidden; */
-  position: relative;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
-/* .scrollList, */
-.addForm,
-.flex,
-ul {
-  overflow: scroll;
-  scrollbar-width: 0;
-}
-
-.scrollList::-webkit-scrollbar,
-.addForm::-webkit-scrollbar,
-.flex::-webkit-scrollbar,
-ul::-webkit-scrollbar {
-  width: 0;
-}
-/* ::-webkit-scrollbar-track {
-  background: #c1c1c1;
-  box-shadow: inset 0 0 6px rgb(239, 239, 239);
-  border-radius: 10px;
-} */
-.description::-webkit-scrollbar {
-  width: 0.5rem;
-}
-::-webkit-scrollbar-thumb {
-  background: #2b76a87b;
-  border-radius: 20px;
-}
-::selection {
-  background: #c7d6dd;
-}
-
-::-moz-selection {
-  background: #c7d6dd;
-}
-.theList {
-  text-transform: lowercase;
-  /*   text-align: center; */
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  list-style: none;
-}
-button {
-  display: block;
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-}
-
-li > * {
-  margin-top: 0.5rem;
-}
-form > * {
-  margin: 0;
-}
-
-form input,
-form textarea {
-  margin-bottom: 0.5rem;
-}
-
-form {
-  padding-bottom: 2rem;
-}
-
-.inline {
-  display: inline;
-}
-
-button {
-  display: inline;
-}
-label {
-  display: block;
-}
-
-.load_container {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
-
-.loading {
-  height: 8rem;
-}
-button {
-  margin-top: 1rem;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  display: block;
-  margin: 0;
-  margin-top: 1rem;
-}
-select {
-  display: inline;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  outline: none;
-  background-color: var(--secondary-color);
-  color: var(--black);
-  border: none;
-}
-
-.option_wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
-.option_wrapper button {
-  margin-top: 0;
-}
-.mui-btn--primary.btn {
-  color: var(--black);
-  background-color: #7f7f7f;
-  border-radius: 5px;
-}
-.mui-btn--primary.btn.delete {
-  background-color: #7f7f7f;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 2px 0 rgba(0, 0, 0, 0.12);
-  line-height: 0;
-  margin-bottom: 15px;
-  color: white;
-}
-.mui-btn--primary.btn.edit {
-  background-color: #e7e9ea;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 2px 0 rgba(0, 0, 0, 0.12);
-  line-height: 0;
-  margin-bottom: 15px;
-  color: black;
-}
-
-.mui-textfield--float-label > label {
-  color: rgb(0 0 0 / 55%);
-  font-size: 14px;
-  font-weight: 300;
-}
-.mui-btn--primary.btn.submit:disabled {
-  background-color: #9b9b9b;
-}
-.mui-btn--primary.btn.submit {
-  color: white;
-}
-.scrollList {
-  min-width: 275px;
-  overflow: hidden;
-}
-.mui-panel.panelMargin {
-  margin: 0.1rem 0.3rem 0.5rem;
-  border-radius: 10px;
-}
-
-.container > header {
-  cursor: pointer;
-}
-
-.colorInput > input::-webkit-color-swatch {
-  border-radius: 5px;
-  padding: 0;
-  margin-bottom: 2rem;
-  height: 35px;
-}
-.colorInput > input {
-  -webkit-appearance: none;
-  margin-bottom: 2rem;
-  border-radius: 5px;
-}
-
-.colorInput > input::-webkit-color-swatch-wrapper {
-  margin-bottom: 2rem;
-  border-radius: 5px;
-}
-.mui-textfield > input:invalid:not(:focus):not(:required),
-.mui-textfield
-  > input:invalid:not(:focus):required.mui--is-empty.mui--is-touched,
-.mui-textfield > input:invalid:not(:focus):required.mui--is-not-empty,
-.mui-textfield
-  > input:invalid:not(:focus):required:not(:empty):not(.mui--is-empty):not(.mui--is-not-empty),
-.mui-textfield
-  > input:invalid:not(:focus):required[value]:not([value=""]):not(.mui--is-empty):not(.mui--is-not-empty),
-.mui-textfield > input:not(:focus).mui--is-invalid:not(:required),
-.mui-textfield
-  > input:not(:focus).mui--is-invalid:required.mui--is-empty.mui--is-touched,
-.mui-textfield > input:not(:focus).mui--is-invalid:required.mui--is-not-empty,
-.mui-textfield
-  > input:not(:focus).mui--is-invalid:required:not(:empty):not(.mui--is-empty):not(.mui--is-not-empty),
-.mui-textfield
-  > input:not(:focus).mui--is-invalid:required[value]:not([value=""]):not(.mui--is-empty):not(.mui--is-not-empty) {
-  border-color: var(--error);
-}
-
-.Done,
-.Doing,
-.To.Do {
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  border: 5px solid white;
-  z-index: 10;
-  min-width: 275px;
-  /*  text-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 2px 0 rgba(0, 0, 0, 0.12); */
-}
-.Done h1,
-.Doing h1,
-.To.Do h1,
-.bg h2 {
-  /*   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 2px 0 rgba(0, 0, 0, 0.12); */
-  border-radius: 10px;
-  width: 100%;
-  height: 100%;
-  padding: 0.5rem;
-  /*   background-color: rgb(143, 136, 136);
-  background-color: #9e9e9e; */
-  color: black;
-  font-weight: 200;
-  padding-left: 1.2rem;
-}
-.Done,
-.Doing,
-.To.Do,
-.bg {
-  color: white;
-}
-.bg {
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  border: 5px solid white;
-  z-index: 10;
-  min-width: 275px;
-  border-radius: 10px;
-}
-
-.bg h2 {
-  font-weight: 400;
-  font-size: 45px;
-  line-height: 48px;
-  text-transform: lowercase;
-  /*   text-align: center; */
-  margin: 0;
-  color: black;
-  padding-left: 1.5rem;
-  font-weight: 200;
-  height: 95%;
-}
-ul {
-  /*   margin-top: 4.8rem; */
-  overflow: scroll;
-  height: calc(100% - 4.5rem);
-}
-
-.mob_nav {
-  display: none;
-}
-
-.hide {
-  display: none;
-}
-.hideAlways {
-  display: none;
-}
-
-.editContainer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: white;
-  width: 100vw;
-  height: 100vh;
-  z-index: 20;
-}
-.editContainer p {
-  width: calc(100% - 40px);
-  height: 4rem;
-  text-align: right;
-  padding: 1rem 2rem 0 0;
-  font-size: 2rem;
-  cursor: pointer;
-  margin: 0;
-}
-
-.editWrapper {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  width: 100%;
-}
-
-.editTask {
-  padding: 1.55rem 0 0 2rem;
-  font-size: 24px;
-  margin: 0;
-}
-
-.mui-textfield--float-label.description {
-  margin-bottom: 0;
-}
-
-form {
-  max-width: 100%;
-}
-
-.flex {
-  width: calc(100% - 40px);
-  height: calc(100% - 8rem);
-  display: flex;
-  justify-content: center;
-  margin-top: 0rem;
-  overflow-y: scroll;
-}
-
-.flex div {
-  width: 100%;
-  max-width: 500px;
-}
-
-.expandCard {
-  cursor: pointer;
-}
-.container {
-  padding-bottom: 0;
-}
-
-.addForm {
-  padding: 1rem 2rem;
-  height: 100vh;
-}
-
-.colorLabel {
-  padding: 0 0 2rem 0;
-}
-
-.colorInput {
-  padding-top: 1rem;
-}
-
-.mui--text-headline,
-h2 {
-  font-size: 1.2rem;
-  margin-top: 1rem;
-  white-space: nowrap;
-  width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-weight: 300;
-  color: rgb(65, 65, 65);
-}
-.mui-panel {
-  padding: 15px 15px 0px 5px;
-  /*   transform: translateY(-9px); */
-}
-
-.biggerFont {
-  font-size: 20px;
-  transition: 0.5s;
-  animation-timing-function: ease-out;
-  white-space: normal;
-  font-weight: 400;
-}
-.smallerFont {
-  font-size: 15px;
-  transition: 0.8s;
-  animation-timing-function: ease-in;
-  white-space: nowrap;
-}
-
-.fade_out {
-  transition: 0.5s;
-  opacity: 0;
-}
-
-.fade_in {
-  transition: 1s;
-  opacity: 1;
-}
-
-.smaller {
-  height: 85px;
-  transition: 0.8s;
-}
-.bigger {
-  height: 420px;
-  transition: 0.5s;
-}
-
-.description {
-  /*  height: 100%; */
-  height: 7rem;
-  overflow-y: scroll;
-  white-space: pre-wrap;
-}
-
-@media (max-width: 600px) {
-  .App {
-    position: relative;
-    overflow: hidden;
-    display: block;
-  }
-  .Main {
-    height: 100vh;
-    overflow: hidden;
-  }
-  .scrollList {
-    position: absolute;
-    /*  width: 90%; */
-    height: 100vh;
-    background-color: #fff;
-    overflow-x: hidden;
-  }
-
-  .Nav {
-    position: absolute;
-    width: calc(100% - 40px);
-    height: 100vh;
-  }
-
-  .addForm {
-    height: calc(100% - 50px);
-    overflow: scroll;
-  }
-
-  .editContainer {
-    width: 100%;
-  }
-
-  .editWrapper {
-    width: calc(100% - 40px);
-  }
-  .relativeContainer {
-    display: block;
-  }
-
-  .To.Do,
-  .Done,
-  .Doing {
-    /*  width: calc(100% - 40px); */
-    width: 100%;
-    /*  position: fixed;
-    top: 0; */
-  }
-
-  .show {
-    z-index: 11;
-    width: calc(100% - 40px);
-    transform: "" /* translateX(0) */;
-    transition: 1s;
-  }
-
-  .hidden {
-    z-index: 10;
-    opacity: 0;
-    transform: translateX(100vw);
-    transition: 1s;
-  }
-
-  .mob_nav {
-    z-index: 12;
-    display: block;
-  }
-  .mob_nav,
-  .mob_nav > div {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    border-radius: 15px 0 0 0;
-    width: 40px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 2px 0 rgba(0, 0, 0, 0.12);
-    cursor: pointer;
-  }
-  .mob_nav > div > p {
-    margin: 0;
-    padding-right: 1.3rem;
-    font-size: 1rem;
-    font-weight: 400;
-    width: 120px;
-    height: 50px;
-    text-align: right;
-    transform: rotate(-90deg) translate(-40px, -27px);
-    color: rgb(46, 45, 45);
-  }
-  .mob_nav > div:nth-child(1) {
-    background-color: #a28c8c;
-    height: 100%;
-  }
-  .mob_nav > div:nth-child(2) {
-    background-color: #bdadad;
-    height: 80%;
-  }
-  .mob_nav > div:nth-child(3) {
-    background-color: #d4c7c7;
-    height: 60%;
-  }
-  .mob_nav > div:nth-child(4) {
-    background-color: #e4dede;
-    height: 40%;
-  }
-
-  .smallerFont {
-    font-size: 15px;
-  }
-}
+/* USE SCSS INSTEAD */
