--- a/src/sass/list.scss
+++ b/src/sass/list.scss
@@ -66,7 +66,7 @@
   }
 
   @supports not (-webkit-touch-callout: none) {
-    height: 100%;
+    height: calc(100% - 5rem);
     max-height: var(--px);
   }
 }
