sorted tasks by timeStamp

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -47,6 +47,7 @@ code {
   position: relative;
   top: 0;
   height: calc(var(--vh, 1vh) * 100);
+  padding-right: 1rem;
 }
 
 .Nav {
@@ -148,6 +149,7 @@ label {
     position: relative;
     overflow: hidden;
     display: block;
+    padding-right: 0;
   }
   .Main {
     height: 100%;
